--- a/Project/Homework.html
+++ b/Project/Homework.html
@@ -48,10 +48,10 @@
 			});
 		
 			mousePos = [0,0];
-			prevMousePos = [0,0];
 			mouseDelta = [0,0];
 			picasso.addEventListener("mousemove", (e) => {
 				mousePos = [e.x, e.y];
+				mouseDelta = [e.movementX, e.movementY];
 			});
 
 			floor = [];
@@ -62,6 +62,15 @@
 						Math.random(),Math.random(),Math.random()]}));
 				}
 			}
+
+			isPointerLocked = false;
+			let canvas = document.getElementById('picasso');
+			canvas.addEventListener('click', lockCursor);
+			document.addEventListener('pointerlockchange', () => isPointerLocked = !isPointerLocked);
+
+			lockCursor();
+			yaw = 0;
+			pitch = Math.PI / 4;
 		}
 
 		function now() { return (new Date()).getTime()/1000; }
@@ -75,18 +84,23 @@
 			var a = time/3;
 			// lookAt([30*cos(a),30*sin(a),20],[0,0,1],[0,0,1]);
 			// lookAt([60, 0, 40], [0,0,1], [0,0,1]);
-			let r = -robot.rot / 180 * Math.PI;
+			yaw = -robot.yaw / 180 * Math.PI;
+			pitch = (90 + robot.pitch) / 180 * Math.PI;
+			if(pitch > Math.PI) pitch = Math.PI;
+			if(pitch < 0) pitch = 0.0001;
 			lookAt([
-				30 * cos(r) + robot.pos[0], 
-				30 * sin(r) + robot.pos[1], 
-				20 + robot.pos[2]], 
-				robot.pos, [0,0,1]);
+				30 * cos(yaw) * sin(pitch) + robot.pos[0],
+				30 * sin(yaw) * sin(pitch) + robot.pos[1],
+				30 * cos(pitch) + robot.pos[2] + 3
+			],[
+				robot.pos[0],
+				robot.pos[1],
+				robot.pos[2] + 3
+			], [0,0,1]);
 
 			
-			mouseDelta = [mousePos[0] - prevMousePos[0], mousePos[1] - prevMousePos[1]];
-			prevMousePos = [mousePos[0], mousePos[1]];
-			
 			moveRobot();
+			mouseDelta = [0,0];
 			
 			for(c of floor) c.draw();
 			// robot.rot += 0.01;
@@ -98,16 +112,18 @@
 		function moveRobot() {
 			let speed = 0.1;
 
-			robot.rot += mouseDelta[0] * 2.0;
+			robot.yaw += mouseDelta[0] * 2.0;
 
 			if(isKeyPressed['ArrowLeft']) {
-				robot.rot -= 10. * speed;
+				robot.yaw -= 10. * speed;
 			}
 			if(isKeyPressed['ArrowRight']) {
-				robot.rot += 10. * speed;
+				robot.yaw += 10. * speed;
 			}
+			robot.pitch += -mouseDelta[1];
+			
 
-			let r = -robot.rot / 180 * Math.PI;
+			let r = -robot.yaw / 180 * Math.PI;
 			let forward = [
 				cos(r) * speed, sin(r) * speed
 			];
@@ -130,6 +146,14 @@
 			if(isKeyPressed['d']) {
 				robot.pos[0] += sideways[0];
 				robot.pos[1] += sideways[1];
+			}
+		}
+
+		function lockCursor() {
+			if(isPointerLocked) {
+					document.exitPointerLock();
+			} else {
+				document.getElementById('picasso').requestPointerLock();
 			}
 		}
 	</script>	
